# vkcourse-homework

./: .gitignore  CMakeLists.txt  README.md  imgui.ini  shader.cmake
HF1/: CMakeLists.txt  LightManager.cpp  LightManager.h  LightningPass.cpp  LightningPass.h  ModelPushConstant.h  ObjectManager.cpp  ObjectManager.h  Pipeline.cpp  Pipeline.h  PipelineUtils.cpp  PipelineUtils.h  PipelineWrapper.cpp  PipelineWrapper.h  PostProcessPass.cpp  PostProcessPass.h  ShadowPass.cpp  ShadowPass.h  TextureManager.cpp  TextureManager.h  camera.h  cube.cpp  cube.h  cylinder.h  debug.cpp  debug.h  grid.cpp  grid.h  hf1.cpp  scene.cpp  scene.h  shared_crap.h  sharedcarp.h
HF1/containers/: ObjectGroup.cpp  ObjectGroup.h
HF1/entities/: BaseEntity.h  OrbitingHelicopter.cpp  OrbitingHelicopter.h  PistonWithBouncingBall.cpp  PistonWithBouncingBall.h  RotatingCube.cpp  RotatingCube.h  RotatingTetrahedron.cpp  RotatingTetrahedron.h  SpinningCirnoPrism.cpp  SpinningCirnoPrism.h
HF1/managers/: ObjectManager.cpp  ObjectManager.h  TextureManager.cpp
HF1/primitives/: BasePrimitive.cpp  BasePrimitive.h  CirnoPrism.cpp  CirnoPrism.h  Cone.cpp  Cone.h  Cube.cpp  Cube.h  Cylinder.cpp  Cylinder.h  Grid.cpp  Grid.h  IDrawable.h  ITransformable.cpp  ITransformable.h  Sphere.cpp  Sphere.h
HF1/render_passes/: LightningPass.cpp  LightningPass.h  PostProcessPass.cpp  PostProcessPass.h  ShadowPass.cpp  ShadowPass.h
HF1/shaders/: lightning_pass.frag  lightning_pass.vert  post_process.frag  shader.frag  shader.vert  shadow_map.vert  triangle_in.frag  triangle_in.vert
HF1/textures/: textures.h
Vulkan grafikus API/hf1/vkcourse/: CMakeLists.txt  README.md
Vulkan grafikus API/hf1/vkcourse/01_window/: 01_window.cpp  CMakeLists.txt
Vulkan grafikus API/hf1/vkcourse/02_triangle/: 02_triangle.cpp  CMakeLists.txt  simple_triangle.cpp  simple_triangle.h  triangle.vert
Vulkan grafikus API/hf1/vkcourse/03_triangle_vertex/: 03_triangle_vertex.cpp  CMakeLists.txt  simple_triangle.cpp  simple_triangle.h  triangle_in.vert
Vulkan grafikus API/hf1/vkcourse/04_cube/: 04_cube.cpp  CMakeLists.txt  simple_cube.cpp  simple_cube.h
Vulkan grafikus API/hf1/vkcourse/05_moving/: 05_moving.cpp  CMakeLists.txt  camera.h  camera_fi.h  grid.cpp  grid.h  grid.vert  simple_cube.cpp
Vulkan grafikus API/hf1/vkcourse/HF1/: 04_cube_vertices.inc  CMakeLists.txt  PipelineUtils.cpp  PipelineUtils.h  camera.h  cube.cpp  cube.h  cylinder.cpp  cylinder.h  grid.cpp  hf1.cpp  simple_cube.cpp  simple_cube.h  triangle_in.vert
Vulkan grafikus API/hf1/vkcourse/lib/: context.cpp  context.h  debug.h  imgui_integration.cpp  imgui_integration.h  swapchain.h  texture.cpp
lib/: CMakeLists.txt  context.cpp  context.h  descriptors.cpp  descriptors.h  imgui_integration.cpp  swapchain.cpp  texture.cpp  texture.h  wrappers.cpp  wrappers.h
